--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseURL = "http://localhost:1313/"
+baseURL = "https://mouse-imaging-centre.github.io/blog/"
 languageCode = "en"
 defaultContentLanguage = "en"
 title = "The Mouse Imaging Centre Blog"
 enableRobotsTXT = true
 enableEmoji = true
 theme = "hugo-theme-even"
-publishDir = "blog"
+publishDir = "docs/"
 
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
 paginate = 3                                              # 首页每页显示的文章数
