--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "The Mouse Imaging Centre Blog"
 enableRobotsTXT = true
 enableEmoji = true
 theme = "hugo-theme-even"
-publishDir = "docs/"
+publishDir = "docs"
 
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
 paginate = 3                                              # 首页每页显示的文章数
